# cryptography-project

./: .gitignore
API/: .dockerignore  .env  .env.server  DockerFile  Dockerfile  README.md  compose.dev.yaml  compose.notraefik.yaml  compose.server.yaml  compose.yaml  pyproject.toml  requirements.txt
API/src/: main.py
API/src/api/: routes.py
API/src/middleware/: auth.py
API/src/models/: msg.py  redisEvents.py  user.py  ws.py
API/src/redis_db/: msg.py  redis.py  subpub.py  user.py
API/src/tests/: redis.py
API/src/uauth/: firebase.py  middleware.py
API/src/utils/: ulid.py
API/src/websocket/: manager.py  models.py  ws.py
