[project]
name = "c4476-api"
version = "0.1.0"
description = "API for C4476's Group Project!!"
authors = [
    {name = "j0lyn3",email = "evergloam1212@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12.12"
package-mode = false
dependencies = [
    "fastapi[standard] (>=0.129.2,<0.130.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
